--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.12.7",
+    "morgan": "^1.10.0",
+    "nanoid": "^3.1.22"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
