--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/AbirAzim/Graphql-Project#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
